# uv-slow

./: .gitignore  README.md  main.py  pyproject.toml  requirements_cleaner.py
example/: main.py  utils.py
uv_slow/: main.py
